Bug 1422288 - Disable d2d for canvas when ANGLE is disable with WebRender r=nical